# cordant-gadgetry

./: .gitignore  LICENSE  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: pages.yml
docs/: index.md
docs/Bash/: index.md
docs/PowerShell/: Fslogix-ResetProfile.md  index.md
docs/Python/: fetch-metadata.md  index.md
docs/styles/: cordant.css
scripts/powershell/: Fslogix-ResetProfile.ps1
scripts/python/: fetch-metadata.py
